--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,6 @@
 <app-buy-ticket-button></app-buy-ticket-button>
 <app-map></app-map>
 <app-tickets></app-tickets>
+<app-schedules></app-schedules>
+<app-gallery></app-gallery>
+<app-footer></app-footer>
