margins bugs fixed, added anchor links scrolling, minor design bug fixed.

--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid p-0 m-0">
+<div class="container-fluid p-0 m-0" id="gallery">
     <div class="w-100 mx-0 row py-4">
         <div class="col text-center">
             <span class="gallery-text py-1 px-3">Galería</span>
