--- a/src/app/components/tickets/tickets.component.html
+++ b/src/app/components/tickets/tickets.component.html
@@ -1,4 +1,4 @@
-<div class="tickets container-fluid">
+<div class="tickets container-fluid" id="tickets">
     <div class="w-100 mx-0 row pt-5">
         <div class="col-12 text-center">
                 <p class="ticket-text">
@@ -19,9 +19,9 @@
             </ul>
         </div>
     </div>
-    <div class="w-100 mx-0 row pt-5">
+    <div class="w-100 mx-0 row pt-5" id="schedules">
         <div class="col text-center">
-                <span class="ticket-text py-1 px-3">Venta de entradas - General</span>
+                <span class="ticket-text py-1 px-3">Venta de entradas</span>
         </div>
     </div>
     <div class="w-100 mx-0 row pt-3">
