--- a/src/app/components/buy-ticket-button/buy-ticket-button.component.css
+++ b/src/app/components/buy-ticket-button/buy-ticket-button.component.css
@@ -1,5 +1,11 @@
 .buy-tickets {
     position: relative;
     top: -15px;
-    max-width: 120px;
+    max-width: 180px;
+}
+
+@media (max-width: 768px) {
+    .buy-tickets {
+        max-width: 120px;
+    }
 }
