--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid bg-yellow py-3">
+<div class="container-fluid bg-yellow py-3" id="footer">
     <div class="w-100 mx-0 row py-4">
         <div class="col text-center">
             <span class="footer-text py-1 px-3">Convenios</span>
