--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,7 +1,7 @@
 <div class="row py-2 my-2 py-md-2 my-md-2 w-100 mx-0">
     <div class="col-10 col-md-8 col-lg-6 text-center mx-auto">
         <div class="card w-auto pt-0 m-0 map-text-container">
-            <div class="card-body p-0">
+            <div class="card-body p-3">
                 <h5 class="card-title map-text">{{ mapText1 }}</h5>
                 <h5 class="card-title map-text">{{ mapText2 }}</h5>
             </div>
@@ -9,7 +9,7 @@
     </div>
 </div>
 <div class="row py-2 my-2 py-md-4 my-md-4 mx-0">
-    <div class="col-10 mx-auto text-center">
+    <div class="col-10 mx-auto text-center" id="map">
         <img class="img-fluid" src="assets/images/map.png" alt="Site Map">
     </div>
 </div>
