--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,27 +5,27 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#">MAPA DEL SITIO</a>
+                <a class="nav-link" href="#map">MAPA DEL SITIO</a>
             </li>
             <span class="v-separator my-0 my-md-2"></span>
             <li class="nav-item">
-                <a class="nav-link" href="#">BOLETERÍA</a>
+                <a class="nav-link" href="#tickets">BOLETERÍA</a>
             </li>
             <span class="v-separator my-0 my-md-2"></span>
             <li class="nav-item">
-                <a class="nav-link" href="#">HORARIOS</a>
+                <a class="nav-link" href="#schedules">HORARIOS</a>
             </li>
             <span class="v-separator my-0 my-md-2"></span>
             <li class="nav-item">
-                <a class="nav-link" href="#">ESTACIONES</a>
+                <a class="nav-link" href="#stations">ESTACIONES</a>
             </li>
             <span class="v-separator my-0 my-md-2"></span>
             <li class="nav-item">
-                <a class="nav-link" href="#">GALERÍA</a>
+                <a class="nav-link" href="#gallery">GALERÍA</a>
             </li>
             <span class="v-separator my-0 my-md-2"></span>
             <li class="nav-item">
-                <a class="nav-link" href="#">CONVENIOS</a>
+                <a class="nav-link" href="#footer">CONVENIOS</a>
             </li>
         </ul>
     </div>
