--- a/src/app/components/schedules/schedules.component.html
+++ b/src/app/components/schedules/schedules.component.html
@@ -1,4 +1,4 @@
-<div class="container pt-4">
+<div class="container pt-4" id="stations">
     <div class="w-100 mx-0 row py-4">
         <div class="col text-center">
             <span class="schedule-text py-1 px-3">Estaciones</span>
@@ -8,8 +8,8 @@
     <div class="row pb-5">
         <div class="col-10 mx-auto station" *ngFor="let station of stations; let idx = index;" (click)="show(idx)">
             <div class="row">
-                <div class="col-11 station-title">{{ station[0] }}</div>
-                <div class="col-1 plus">+</div>
+                <div class="col-10 station-title">{{ station[0] }}</div>
+                <div class="col-2 plus text-right">+</div>
             </div>
             <div class="row">
                 <div class="col">
