Ajustadas tipografias y componente de precio de entradas

--- a/src/app/components/map/map.component.css
+++ b/src/app/components/map/map.component.css
@@ -13,3 +13,7 @@
     background-repeat: repeat-x;
     background-position: center center;
 }
+
+.card-title {
+    font-family: 'Burbank Big Condensed' !important;
+}
