--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -2,8 +2,8 @@
     <div class="col-10 col-md-8 col-lg-6 text-center mx-auto">
         <div class="card w-auto pt-0 m-0 map-text-container">
             <div class="card-body p-3">
-                <h5 class="card-title map-text">{{ mapText1 }}</h5>
-                <h5 class="card-title map-text">{{ mapText2 }}</h5>
+                <h5 class="card-title map-text"><b>{{ mapText1 }}</b></h5>
+                <h5 class="card-title map-text"><b>{{ mapText2 }}</b></h5>
             </div>
         </div>
     </div>
