--- a/src/app/components/banner/banner.component.css
+++ b/src/app/components/banner/banner.component.css
@@ -3,6 +3,8 @@
     background-color: #f0f0f0;
     box-shadow: 4px 4px rgba(27, 27, 27, 0.5);
     border-radius: 3px;
+    font-family: 'Burbank Big Condensed' !important;
+    font-size: 20px;
 }
 
 .banner {
@@ -27,6 +29,6 @@
         background-color: #f0f0f0;
         box-shadow: 4px 4px rgba(27, 27, 27, 0.5);
         border-radius: 3px;
-        font-size: 10px;
+        font-size: 14px;
     }
 }
