--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -9,8 +9,8 @@
             <p class="h5 mb-5">
                 Tenemos disponibles convenios especiales para empresas, departamentos de bienestar, gerencias de RRHH, servicios públicos, FFAA, colegios, liceos y grupos grandes. Escríbenos y tendrás la posibilidad de visitarnos con atractivos precios preferenciales.
             </p>
-            <p class="h3 my-5">Contáctanos a: loremipsum@lorem.com</p>
-            <p class="h6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias expedita perspiciatis nulla minus perferendis non aspernatur deleniti modi est in.</p>
+            <p class="h3 my-5"><b>Contáctanos a: loremipsum@lorem.com</b></p>
+            <p class="h6">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Alias expedita perspiciatis nulla minus perferendis non aspernatur deleniti modi est in.</p>
         </div>
     </div>
 </div>
