--- a/src/app/components/schedules/schedules.component.html
+++ b/src/app/components/schedules/schedules.component.html
@@ -12,8 +12,9 @@
                 <div class="col-2 plus text-right">+</div>
             </div>
             <div class="row">
-                <div class="col">
-                    <img *ngIf="station[2]" class="img-fluid" [src]="'assets/images/'+station[1]" alt="">
+                <div class="col" *ngIf="station[2]">
+                    <img class="img-fluid" [src]="'assets/images/'+station[1]" alt="">
+                    <p class="p-3 text-justify bigger">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit ex, saepe quam aperiam officia dolorum. Esse vero quibusdam adipisci quam? Veritatis, id. Rerum maxime ex accusantium ipsa a sapiente in, animi saepe adipisci. Neque porro, ipsa architecto culpa aut cum veniam quos temporibus repellat quidem corrupti quasi ad illum sapiente.</p>
                 </div>
             </div>
         </div>
