Agregadas imagenes a galería, agregados 3 nuevas estaciones sin foto, agregado reglamento en el footer, corregidos algunos tamaños de textos y tipografías.

--- a/src/app/components/map/map.component.css
+++ b/src/app/components/map/map.component.css
@@ -16,4 +16,11 @@
 
 .card-title {
     font-family: 'Burbank Big Condensed' !important;
+    font-size: 34px !important;
+}
+
+@media (max-width: 768px) {
+    .card-title {
+        font-size: 26px !important;
+    }
 }
