agregados multiples efectos visuales, agregada foto a Building Happening, cambios menores en tamaños de texto y contenido de párrafos.

--- a/src/app/components/buy-ticket-button/buy-ticket-button.component.html
+++ b/src/app/components/buy-ticket-button/buy-ticket-button.component.html
@@ -1,4 +1,4 @@
-<div class="buy-tickets text-center w-25 m-auto">
+<div class="buy-tickets text-center w-25 m-auto animated swing faster">
     <a href="https://google.com">
         <img class="img-fluid" src="assets/images/buy/tickets-button.png" alt="Tickets Button">
     </a>
