--- a/src/app/components/banner/banner.component.css
+++ b/src/app/components/banner/banner.component.css
@@ -4,7 +4,13 @@
     box-shadow: 4px 4px rgba(27, 27, 27, 0.5);
     border-radius: 3px;
     font-family: 'Burbank Big Condensed' !important;
-    font-size: 20px;
+    font-size: 32px;
+}
+
+@media (max-width: 980px) {
+    .banner-sub-text {
+        font-size: 22px;
+    }
 }
 
 .banner {
