--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid banner">
+<div class="container-fluid banner animated fadeIn fast">
     <div class="row py-3">
         <div class="col-6">
             <div class="ml-auto w-50 text-right">
