--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid bg-yellow py-3" id="footer">
+<div class="container-fluid bg-yellow py-3 animated fadeInUp fast" id="footer">
     <div class="w-100 mx-0 row py-4">
         <div class="col text-center">
             <span class="footer-text py-1 px-3">Convenios</span>
@@ -9,7 +9,7 @@
             <p class="h5 mb-5">
                 Tenemos disponibles convenios especiales para empresas, departamentos de bienestar, gerencias de RRHH, servicios públicos, FFAA, colegios, liceos y grupos grandes. Escríbenos y tendrás la posibilidad de visitarnos con atractivos precios preferenciales.
             </p>
-            <p class="h3 my-5"><b>Contáctanos a: theband@e-markettools.com</b></p>
+            <p class="h3 my-5"><b>Contáctanos en: theband@e-markettools.com</b></p>
             <p class="h4 my-5">Conoce las reglas de la casa <b class="footer-text clickable"><small><a class="text-white" href="assets/ReglasDeLaCasa.pdf" target="_blank">aquí</a></small></b></p>
             <p class="h6"><small>LEGO®, el logo de LEGO®, las minifiguras son marcas registradas y/o derechos de<br>autor del grupo LEGO®. Todos los derechos reservados. &copy;2019 The LEGO® Group.</small></p>
         </div>
