--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,4 +1,4 @@
-<div class="row py-2 my-2 py-md-2 my-md-2 w-100 mx-0">
+<div class="row py-2 my-2 py-md-2 my-md-2 w-100 mx-0 animated fadeIn fast">
     <div class="col-10 col-md-8 col-lg-6 text-center mx-auto">
         <div class="card w-auto pt-0 m-0 map-text-container">
             <div class="card-body p-3">
@@ -8,7 +8,7 @@
         </div>
     </div>
 </div>
-<div class="row py-2 my-2 py-md-4 my-md-4 mx-0">
+<div class="row py-2 my-2 py-md-4 my-md-4 mx-0 animated fadeIn fast">
     <div class="col-10 mx-auto text-center" id="map">
         <img class="img-fluid d-lg-none" src="assets/images/maps/MapaWebMobile.png" alt="Site Map">
         <img class="img-fluid d-none d-lg-inline-block" src="assets/images/maps/MapaWebDesktop.png" alt="Site Map">
