--- a/src/app/components/tickets/tickets.component.html
+++ b/src/app/components/tickets/tickets.component.html
@@ -1,4 +1,4 @@
-<div class="tickets container-fluid" id="tickets">
+<div class="tickets container-fluid animated fadeIn fast" id="tickets">
     <div class="w-100 mx-0 row pt-5">
         <div class="col-12 text-center">
                 <p class="ticket-text">
@@ -8,9 +8,6 @@
         </div>
     </div>
     <div class="w-100 mx-0 row pt-5">
-        <!-- <div class="col-4 text-right">
-            <span class="free-day py-1 px-3">Free Day</span>
-        </div> -->
         <div class="col-4 d-flex align-items-center justify-content-center">
             <span class="free-day py-1 px-1 px-md-3">Free Day</span>
         </div>
