ajuste de textos, ajustes de navbar, ajustadas reglas de la casa.

--- a/src/app/components/tickets/tickets.component.html
+++ b/src/app/components/tickets/tickets.component.html
@@ -1,4 +1,4 @@
-<div class="tickets container-fluid animated fadeIn fast" id="tickets">
+<div class="tickets container-fluid animated fadeIn fast">
     <div class="w-100 mx-0 row pt-5">
         <div class="col-12 text-center">
                 <p class="ticket-text">
@@ -19,7 +19,7 @@
             </ul>
         </div>
     </div>
-    <div class="w-100 mx-0 row pt-5" id="schedules">
+    <div class="w-100 mx-0 row pt-5" id="tickets">
         <div class="col text-center">
                 <span class="ticket-text py-1 px-3">Venta de entradas</span>
         </div>
@@ -69,7 +69,7 @@
         </div>
     </div>
 
-    <div class="w-100 mx-0 row pt-5">
+    <div class="w-100 mx-0 row pt-5" id="schedules">
         <div class="col text-center">
                 <span class="ticket-text py-1 px-3">Horarios</span>
         </div>
