Agregada ultima foto de estaciones, modificada imagenes de mapas, agregado GTM, modificado URL de botón de entradas

--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -9,9 +9,9 @@
     </div>
 </div>
 <div class="row py-2 my-2 py-md-4 my-md-4 mx-0 animated fadeIn fast">
-    <div class="col-10 mx-auto text-center" id="map">
-        <img class="img-fluid d-lg-none" src="assets/images/maps/MapaWebMobile.png" alt="Site Map">
-        <img class="img-fluid d-none d-lg-inline-block" src="assets/images/maps/MapaWebDesktop.png" alt="Site Map">
+    <div class="col-12 m-0 p-0 text-center" id="map">
+        <img class="img-fluid d-lg-none mb-5" src="assets/images/maps/MapaWebMobile.jpg" alt="Site Map">
+        <img class="img-fluid d-none d-lg-inline-block" src="assets/images/maps/MapaWebDesktop.jpg" alt="Site Map">
     </div>
 </div>
 
