--- a/src/app/components/buy-ticket-button/buy-ticket-button.component.html
+++ b/src/app/components/buy-ticket-button/buy-ticket-button.component.html
@@ -1,5 +1,5 @@
 <div class="buy-tickets text-center w-25 m-auto animated swing faster">
-    <a target="_blank" href="https://ventas.ticketshop.com.co/i/VET/">
+    <a target="_blank" href="https://ventas.ticketshop.com.co/i/VET3/">
         <img class="img-fluid" src="assets/images/buy/tickets-button.png" alt="Tickets Button">
     </a>
 </div>
