--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -15,3 +15,12 @@
 .clickable {
     cursor: pointer !important;
 }
+
+.mailto {
+    color: black !important;
+    text-decoration: none !important;
+}
+
+.mailto:hover {
+    text-decoration: underline black !important;
+}
