--- a/src/app/components/tickets/tickets.component.html
+++ b/src/app/components/tickets/tickets.component.html
@@ -76,7 +76,7 @@
     </div>
     <div class="w-100 mx-0 row pt-3 mb-5 pb-5">
         <div class="col-12 col-lg-6 text-center mx-auto">
-            <div class="d-inline-block ticket-sub-info big py-1 px-3 mx-4 h6">Lunes a Jueves 09:00 a.m. - 09:00 p.m. <br> V-S-D-Fest 09:00 a.m. - 03:00 p.m. / 04:00 p.m. - 10:00 p.m.</div>
+            <div class="d-inline-block ticket-sub-info big py-1 px-3 mx-4 h6">Abierto todos los días de <br> 9:00 a.m a 9:00 p.m.</div>
         </div>
     </div>
     <div class="legobg w-100"></div>
